crates/fetch_hyper/src/snapshots/fetch_hyper__builder__tests__defaults.snap
---
source: crates/fetch_hyper/src/builder.rs
expression: defaults
---
fetch_hyper::builder::HyperTransportBuilder<fetch_hyper::testing::FakeConnector, fetch_hyper::testing::FakeStream> {
    options: TransportOptions {
        connect_timeout: 30s,
        connection_keep_alive: Disabled,
        request_filter: Https,
        supported_http_versions: [
            HTTP/1.1,
            HTTP/2.0,
        ],
        connection_pool: ConnectionPoolOptions {
            connection_idle_timeout: Limited(
                60s,
            ),
            max_connections: 18446744073709551615,
            multiple_pools: None,
            connection_lifetime: ConnectionLifetime(
                Unlimited,
            ),
        },
        http_2: Http2Options {
            initial_max_send_streams: None,
            adaptive_window: false,
            initial_stream_window_size: None,
        },
        socket: SocketOptions {
            no_delay: None,
            receive_buffer_size: None,
            send_buffer_size: None,
        },
        extra: {},
    },
    pool_index: PoolIndex(
        0,
    ),
    ..
}
